<resources>
    <string name="app_name">Diamonds</string>
    <string name="title_benefit_app">The benefit from this application :</string>
    <string name="benefit_app_one">1. Neatly structured recording</string>
    <string name="benefit_app_three">3. Easy to use</string>
    <string name="benefit_app_two">2. Data always up to date</string>
    <string name="skip">Skip</string>
    <string name="next">NEXT</string>
    <string name="login">LOGIN</string>
    <string name="three">3</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="title_on_login">Login and feel the ease</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="account">Account</string>
    <string name="customer">+Customer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_customer">Add</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="title_step_one">Step One</string>
    <string name="area">Area</string>
    <string name="company_shop_name">Company / Shop name</string>
    <string name="company_npwp">Company NPWP</string>
    <string name="company_phone">Company Phone</string>
    <string name="name_admin_company">Name Admin Company</string>
    <string name="id_card_admin_company">ID Card Admin Company</string>
    <string name="place_date_birth_of_admin"><![CDATA[Place & Date Birth of Admin]]><u>*optional</u></string>
    <string name="date_birth">Date Birth</string>
    <string name="place_birth">Place Birth</string>
    <string name="npwp_admin">NPWP Admin Company / Shop<u>*optional</u></string>
    <string name="phone_number_admin">Phone Number Admin</string>
    <string name="address_admin">Address Admin<u>*optional</u></string>
    <string name="empty_title"> </string>
    <string name="company_address">Company Address</string>
    <string name="step_two">Step Two</string>
    <string name="list_area">List Area</string>
    <string name="cancel">Cancel</string>
    <string name="note_optional">Note : optional can be left blank</string>
    <string name="please_wait">Please wait</string>
    <string name="title_next_upload_document">Next : upload KTP Admin, upload shop display, upload NPWP admin, upload NPWP company</string>
    <string name="title_shop_photo">Shop</string>
    <string name="id_card">ID Card &amp; NPWP Admin</string>
    <string name="title_npwp_admin">NPWP Admin</string>
    <string name="npwp_company">NPWP Company</string>
    <string name="register">Register</string>
    <string name="photo_1">Photo 1</string>
    <string name="photo_2">Photo 2</string>
    <string name="sample_name">Good Sales</string>
    <string name="title_add_customer">Add Customer</string>
    <string name="add_order_customer">Add Order Customer</string>
    <string name="place_order">Place Order</string>
    <string name="input_your_price_here">Input your price here</string>
    <string name="input_price">Input your price here</string>
    <string name="create_order_for">Create order for :</string>
    <string name="dash_line">-</string>
    <string name="add">add</string>
    <string name="remove">Remove</string>
    <string name="input_total">Input total order</string>
    <string name="price_from_you">Price from you</string>
    <string name="choose">Choose</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="asking_delete">Are you sure want to delete ?</string>
    <string name="input_sales_name_here">sales name</string>
    <string name="invoice_number">no faktur</string>
    <string name="kepada_yth">KEPADA YTH</string>
    <string name="tgl">TGL</string>
    <string name="hint_no_d_o">no d/o</string>
    <string name="do_title">D/O. No.</string>
    <string name="factur_title">FAKTUR No.</string>
    <string name="sales_title">SALES</string>
    <string name="tempo_title">TEMPO</string>
    <string name="amount_title">Jumlah</string>
    <string name="price_title">Harga</string>
    <string name="name_title">Nama</string>
    <string name="total_title">Total</string>
    <string name="total_price">Total</string>
    <string name="appove_order">Appove Order</string>
    <string name="tenor">Tenor :</string>
    <string name="clear_order">X | Clear</string>
    <string name="colon">:</string>
    <string name="customer_name">Customer</string>
    <string name="detail_order">detail order</string>
    <string name="postpaid">POSTPAID</string>
    <string name="due_date">DUE DATE</string>
    <string name="status">STATUS</string>
    <string name="product">Product :</string>
    <string name="make_payment">Make Payment</string>
    <string name="total_pay">Total Pay</string>
    <string name="spec_product">Spek Produk</string>
    <string name="total_must_pay">Total Must Pay :</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="payment_status">Payment Status</string>
    <string name="type_payment">Type Pay</string>
    <string name="payment_history">Payment</string>
    <string name="date">Date</string>
    <string name="payment">Payment</string>
    <string name="payment_account">Payment Account </string>
    <string name="todo">TODO</string>
    <string name="set_level_customer">Set level customer</string>
    <string name="detail_profile"><u>detail profile</u></string>
    <string name="logout">Logout</string>
    <string name="reload">tap to reload</string>
    <string name="load_profile_failed">Load Profile Failed</string>
    <string name="empty_transaction">Empty Transaction</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="empty_customer">Empty Customer</string>
    <string name="add_customer_button">Add Customer</string>
    <string name="remaining_debt">Remaining Debt :</string>
    <string name="paid_off">Lunas</string>
    <string name="not_paid_off">Belum Lunas</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="ask_logout">Are you sure want to logout?</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="gender">Gender</string>
    <string name="add_giro">Add Giro</string>
    <string name="or">Or</string>
    <string name="giro_number">Giro Number</string>
    <string name="bank_name">Bank</string>
    <string name="balance">Balance</string>
    <string name="date_receive">Date Receive</string>
    <string name="hint_date">21</string>
    <string name="hint_month">01</string>
    <string name="dash">-</string>
    <string name="hint_year">2021</string>
    <string name="payment_with_giro">Payment With Giro</string>
    <string name="status_giro">Status Giro</string>
    <string name="bank">Bank</string>
    <string name="receive_on">Receive At</string>
</resources>