<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_input">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/asking_delete"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_gray"
                android:textSize="12sp"
                android:text="@string/yes"/>
            <Button
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textSize="12sp"
                android:text="@string/no"/>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>